# ubiq-fpe-c

./: .gitignore  .gitlab-ci.yml  CHANGELOG.md  CMakeLists.txt  README.md
src/: CMakeLists.txt
src/include/ubiq/fpe/: ff1.h  ff3_1.h
src/include/ubiq/fpe/internal/: bn.h  debug.h  ffx.h  radix.h
src/lib/: CMakeLists.txt  bn.c  ff1.c  ff3_1.c  ffx.c  radix.c
src/test/: CMakeLists.txt  bn.cpp  ff1.cpp  ff3_1.cpp  ffx.cpp  radix.cpp
